--- a/index.html
+++ b/index.html
@@ -68,9 +68,6 @@
           src : imageUrl
         }).appendTo(container);
       }
-      $('#getLocation').click(getLocation);
-      $('#initWatch').click(initiate_watchlocation);
-      $('#stopWatch').click(stop_watchlocation); 
     </script>
   </head>
   <body >
@@ -83,5 +80,6 @@
 
     
     <script src="jquery/jquery.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
